# jarvis

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt   requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_tags.py  003_task_tags_avatar.py  004_note_pinned.py  005_todos.py  006_task_period_and_parent_todo.py  007_sprints_and_gos.py  008_go_description.py  009_routines_and_focus_sprints.py  010_normalize_statuses.py  1fbea40b96b4_initial.py
backend/app/: main.py
backend/app/api/: auth.py  metrics.py  notes.py  tasks.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  security.py
backend/app/dependencies/: __init__.py  auth.py  db.py  pagination.py  rate_limit.py  upload.py
backend/app/models/: __init__.py  metrics.py  note.py  notes.py  task.py  task_log.py  tasks.py  user.py
backend/app/routers/: __init__.py  ai.py  auth.py  focus_sprints.py  metrics.py  notes.py  routines.py  tags.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  metrics.py  note.py  notes.py  task.py  task_log.py  tasks.py  user.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  llm.py  note_service.py  s3.py  task_service.py  upload_service.py
backend/migrations/: env.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py  test_metrics.py  test_notes.py  test_tasks.py
frontend/: Dockerfile  (+10 more)
(+41 files in other folders)
